--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ALGORITMO DE COMPRESSÃO DE CARACTERES</title>
+  <title>compactação de sequência de caractere</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="icon" href="https://img.icons8.com/?size=50&id=JpGSJXycgAYe&format=png" type="image/icon">
 </head>
