--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>compactação de sequência de caractere</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <link rel="icon" href="https://img.icons8.com/?size=50&id=JpGSJXycgAYe&format=png" type="image/icon">
+  <link rel="icon" href=/IMAGENS/CDD.png type="image/icon">
 </head>
 <body>
   <main id="main-compressao">
