--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>compactação de sequência de caractere</title>
-  <link rel="icon" href="https://w7.pngwing.com/pngs/692/333/png-transparent-data-compression-computer-icons-data-compression-logo-artwork-symbol.png" type="image/icon">
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2758/2758543.png" type="image/icon">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="icon" href=/IMAGENS/CDD.png type="image/icon">
 </head>
