--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>compactação de sequência de caractere</title>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2758/2758543.png" type="image/icon">
+  <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSybB_7K9NKsf9cyVKYrD6BzaJHfvt-uiBLJpO8s8eGH15GCP0zcNtf7JU4NezBTpbIvqA&usqp=CAU" type="image/icon">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="icon" href=/IMAGENS/CDD.png type="image/icon">
 </head>
